# RocksDB-Plugin

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SECURITY.md  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
include/AVEVA/RocksDB/Plugin/Azure/: AzureErrorTranslator.hpp  BlobFilesystem.hpp  Directory.hpp  LockFile.hpp  Logger.hpp  Plugin.hpp  ReadWriteFile.hpp  ReadableFile.hpp  WriteableFile.hpp
include/AVEVA/RocksDB/Plugin/Azure/Impl/: AzureContainerClient.hpp  BlobAttributes.hpp  BlobFilesystemImpl.hpp  BlobHelpers.hpp  BufferChunkInfo.hpp  Configuration.hpp  DirectoryImpl.hpp  LockFileImpl.hpp  LoggerImpl.hpp  PageBlob.hpp  ReadWriteFileImpl.hpp  ReadableFileImpl.hpp  StorageAccount.hpp  WriteableFileImpl.hpp
include/AVEVA/RocksDB/Plugin/Azure/Models/: ChainedCredentialInfo.hpp  ServicePrincipalStorageInfo.hpp
include/AVEVA/RocksDB/Plugin/Core/: BlobClient.hpp  ContainerClient.hpp  File.hpp  FileBasedCompressedSecondaryCache.hpp  FileCache.hpp  FileCacheEntry.hpp  Filesystem.hpp  LocalFile.hpp  LocalFilesystem.hpp  LruFileIndex.hpp  RocksDBHelpers.hpp  Util.hpp
infrastructure/cmake/: aveva-install-library-config.cmake
src/: CMakeLists.txt
src/AVEVA/RocksDB/Plugin/Azure/: AzureErrorTranslator.cpp  BlobFilesystem.cpp  CMakeLists.txt  Directory.cpp  LockFile.cpp  Logger.cpp  Plugin.cpp  ReadWriteFile.cpp  ReadableFile.cpp  WriteableFile.cpp  aveva-rocksdb-plugin-azure-config.cmake.in
src/AVEVA/RocksDB/Plugin/Azure/Impl/: AzureContainerClient.cpp  BlobAttributes.cpp  BlobFilesystemImpl.cpp  BlobHelpers.cpp  CMakeLists.txt  DirectoryImpl.cpp  LockFileImpl.cpp  LoggerImpl.cpp  PageBlob.cpp  ReadWriteFileImpl.cpp  ReadableFileImpl.cpp  StorageAccount.cpp  WriteableFileImpl.cpp  aveva-rocksdb-plugin-azure-impl-config.cmake.in
src/AVEVA/RocksDB/Plugin/Azure/Models/: CMakeLists.txt  ChainedCredentialInfo.cpp  ServicePrincipalStorageInfo.cpp
src/AVEVA/RocksDB/Plugin/Core/: CMakeLists.txt  FileBasedCompressedSecondaryCache.cpp  FileCache.cpp  FileCacheEntry.cpp  LocalFile.cpp  LocalFilesystem.cpp  LocalIoUtil.cpp  LruFileIndex.cpp  ResultHandle.cpp  RocksDBHelpers.cpp  Util.cpp  aveva-rocksdb-plugin-core-config.cmake.in
src/Azure/: CMakeLists.txt  Logger.cpp  Plugin.cpp
src/Azure/Impl/: CMakeLists.txt  DirectoryImpl.cpp  LoggerImpl.cpp  WriteableFileImpl.cpp
src/Azure/Models/: CMakeLists.txt  aveva-rocksdb-plugin-azure-models-config.cmake.in
src/Core/: CMakeLists.txt  CrcUtil.cpp  CrcUtil.hpp  FileFormat.hpp  LocalFile.cpp  LocalFilesystem.cpp  LocalIoUtil.hpp  LruFileIndex.cpp  MapEntryResult.hpp  ParsedHeader.hpp  ResultHandle.cpp  ResultHandle.hpp  Util.cpp  ZstdCodec.cpp  ZstdCodec.hpp  aveva-rocksdb-plugin-core-config.cmake.in
tests/: CMakeLists.txt
tests/AVEVA/RocksDB/Plugin/Azure/Impl/: BlobFilesystemIntegrationTests.cpp  BlobFilesystemIntegrationTests_README.md  BlobFilesystemRenewLeaseTests.cpp  BufferChunkInfoTests.cpp  CMakeLists.txt  ImplTests.cpp  IntegrationTestHelpers.cpp  IntegrationTestHelpers.hpp  PluginSecondaryCacheIntegrationTests.cpp  ReadWriteFileIntegrationTests.cpp  ReadWriteFileTests.cpp  ReadableFileIntegrationTests.cpp  ReadableFileTests.cpp  WriteableFileIntegrationTests.cpp  WriteableFileTests.cpp
tests/AVEVA/RocksDB/Plugin/Core/: BlobClientMock.cpp  BlobClientMock.hpp  CMakeLists.txt  ContainerClientMock.cpp  ContainerClientMock.hpp  CoreTests.cpp  FileBasedCompressedSecondaryCacheApiTests.cpp  FileBasedCompressedSecondaryCacheCapacityTests.cpp  FileBasedCompressedSecondaryCacheCompressionTests.cpp  FileBasedCompressedSecondaryCacheConcurrencyTests.cpp  FileBasedCompressedSecondaryCacheCorruptionTests.cpp  FileBasedCompressedSecondaryCacheExceptionTests.cpp  FileBasedCompressedSecondaryCacheMockTests.cpp  FileBasedCompressedSecondaryCacheRoundTripTests.cpp  FileBasedCompressedSecondaryCacheTestHelpers.hpp  FileBasedCompressedSecondaryCacheTests.cpp  FileCacheTests.cpp  FileMock.cpp  FileMock.hpp  FilesystemMock.cpp  FilesystemMock.hpp
tests/AVEVA/RocksDB/Plugin/Core/Mocks/: BlobClientMock.cpp  BlobClientMock.hpp  CMakeLists.txt  ContainerClientMock.cpp  ContainerClientMock.hpp  FileMock.cpp  FileMock.hpp  FilesystemMock.cpp  FilesystemMock.hpp
