cmake_minimum_required(VERSION 3.22)
project(aveva-rocksdb-plugin LANGUAGES CXX VERSION 0.0.1)
option(AVEVA_ROCKSDB_TESTS "Build tests for plugins" ON)
list(APPEND CMAKE_PREFIX_PATH "${CMAKE_CURRENT_SOURCE_DIR}/infrastructure/cmake")
add_subdirectory(src)
if (${AVEVA_ROCKSDB_TESTS})
    include(CTest)
    add_subdirectory(tests)
endif()
